test/visibility/import/enablesUnqualified/importAndImport.good
importAndImport.chpl:21: In function 'main':
importAndImport.chpl:22: error: 'A' undeclared (first use this function)
